<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/card_margin"
        android:elevation="3dp"
        card_view:cardCornerRadius="@dimen/card_album_radius"
        card_view:cardBackgroundColor="@android:color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:paddingTop="10sp"
                android:textSize="@dimen/album_title" />

            <TextView
                android:id="@+id/social_situation_mood_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/title"
                android:layout_below="@id/title"
                android:onClick="onClick"
                android:clickable="true"
                />

            <ImageView
                android:id="@+id/emoji"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_alignStart="@+id/title"
                android:layout_below="@id/social_situation_mood_display"
                android:layout_marginLeft="3dp"
                android:paddingTop="5dp"
                />


            <TextView
                android:id="@+id/trigger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/emoji"
                android:layout_marginBottom="17dp"
                android:layout_toEndOf="@+id/emoji"
                android:text="DSJAKFLA"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/trigger"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:paddingBottom="5sp" />


            <ImageView
                android:id="@+id/overflow"
                android:layout_width="@dimen/ic_album_overflow_width"
                android:layout_height="@dimen/ic_album_overflow_height"
                android:layout_alignBottom="@+id/title"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_more_vert_black_24dp" />

            <TextView
                android:id="@+id/dt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/overflow"
                android:layout_below="@+id/thumbnail"
                android:text="JKDLSAJDSDKALS"
                android:textSize="11sp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>